@@ -22,6 +22,11 @@
 
     Livestatus
     * FIX: comments_with_info in service table was always empty
+    
+    Livecheck
+    * FIX: fixed problem with long plugin output
+    * FIX: added /0 termination to strings
+    * FIX: changed check_type to be always active (0)
 
     Checks & Agents:
     * FIX: Linux mk_logwatch: iregex Parameter was never used
